Using different image for carousel now

--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
         </div>
         <div class="carousel-item">
           <h2 class="project-text">The Great Fleece</h2>
-            <a href="https://akirasaur.itch.io/the-great-fleece"><img class="project-img" src="images/GreatFleece.PNG" alt="great-fleece-screenshot" ></a>
+            <a href="https://akirasaur.itch.io/the-great-fleece"><img class="project-img" src="images/GreatFleece.PNG" alt="great-fleece-screenshot"></a>
             <p>A challenging, third-person, point and click stealth game.</p>
         </div>
         <div class="carousel-item active">
           <h2 class="project-text">HEMA Hit Detector</h2>
-            <a href="https://universe.roboflow.com/luke-webb/hema-hit-detector/model/2"><img class="project-img" src="images/HEMA.PNG" alt="HEMA-screenshot" ></a>
+            <a href="https://universe.roboflow.com/luke-webb/hema-hit-detector/model/2"><img class="project-img" src="images/HEMA.jpg" alt="HEMA-screenshot"></a>
             <p>Real-time hit detection app for historical martial arts using YOLO-V8 object detection (WIP) </p>
         </div>
 
