--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </div>
         <div class="carousel-item active">
           <h2 class="project-text">HEMA Hit Detector</h2>
-            <a href="https://universe.roboflow.com/luke-webb/hema-hit-detector/model/2"><img class="project-img" src="images/HEMA.jpg" alt="HEMA-screenshot"></a>
+            <a href="https://universe.roboflow.com/luke-webb/hema-hit-detector/model/2"><img class="project-img" src="images/HEMA.png" alt="HEMA-screenshot"></a>
             <p>Real-time hit detection app for historical martial arts using YOLO-V8 object detection (WIP) </p>
         </div>
 
