Added new game project to carousel. Removed old WIP that is stale

--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
             <p>A challenging, third-person, point and click stealth game.</p>
         </div>
         <div class="carousel-item active">
-          <h2 class="project-text">HEMA Hit Detector</h2>
-            <a href="https://universe.roboflow.com/luke-webb/hema-hit-detector/model/2"><img class="project-img" src="images/HEMA.png" alt="HEMA-screenshot"></a>
-            <p>Real-time hit detection app for historical martial arts using YOLO-V8 object detection (WIP) </p>
+          <h2 class="project-text">Project: Liberate Owheo</h2>
+            <a href="https://akirasaur.itch.io/project-liberate-owheo"><img class="project-img" src="images/Fight3.png" alt="liberate-owheo-screenshot"></a>
+            <p>A roguelike card-game set in the University of Otago, after an AI invasion.</p>
         </div>
 
       </div>
